--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.4.2",
+    "lucide-react": "^0.476.0",
     "motion": "^12.4.2",
     "next": "15.1.7",
     "react": "^19.0.0",
