--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.4.2",
     "lucide-react": "^0.476.0",
     "motion": "^12.4.2",
