--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,6 +16,7 @@
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.15.1",
     "resend": "^4.1.2",
     "swiper": "^11.2.3"
