--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,6 +14,7 @@
     "lucide-react": "^0.476.0",
     "motion": "^12.4.2",
     "next": "15.1.7",
+    "next-intl": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
